# power-scrapper

./: .gitignore  CLAUDE.md  INSTRUCTIONS.md  Justfile  pyproject.toml
docker/: docker-compose.yml
docker/searxng/: settings.yml
power_scrapper/: __init__.py  __main__.py  cli.py  config.py  errors.py  log.py  scraper.py
power_scrapper/extraction/: __init__.py  cascade.py  newspaper_ext.py  readability_ext.py
power_scrapper/http/: __init__.py  base.py  curl_cffi_client.py  httpx_client.py  patchright_client.py  tiered.py
power_scrapper/output/: __init__.py  excel.py
power_scrapper/proxy/: __init__.py  manager.py
power_scrapper/search/: __init__.py  base.py  google_news.py  google_search.py  searxng.py  yandex.py
power_scrapper/utils/: __init__.py  date_parser.py  dedup.py  punycode.py  small_media.py  url_builder.py
src/power_scrapper/: __init__.py  cli.py  config.py  scraper.py
src/power_scrapper/extraction/: __init__.py  base.py  cascade.py  crawl4ai_ext.py  patchright_ext.py  trafilatura_ext.py
src/power_scrapper/http/: __init__.py  camoufox_client.py  curl_cffi_client.py  nodriver_client.py  patchright_client.py  rnet_client.py  tiered.py
src/power_scrapper/output/: __init__.py  base.py  csv_writer.py  json_writer.py  markdown_writer.py
src/power_scrapper/proxy/: base.py  sources.py
src/power_scrapper/search/: __init__.py  api_interceptor.py  base.py  google_news.py  google_search.py  searxng.py  seleniumbase_strategy.py  yandex.py
src/power_scrapper/utils/: __init__.py  cache.py  date_parser.py  dedup.py  rate_limiter.py  small_media.py  text_cleaning.py  url_builder.py
tests/: conftest.py  test_config.py
tests/test_extraction/: test_cascade.py  test_patchright_ext.py
tests/test_http/: test_camoufox_client.py  test_httpx_client.py  test_nodriver_client.py  test_rnet_client.py  test_tiered.py  test_tiered_cache.py
tests/test_output/: test_markdown_writer.py  test_writers.py
tests/test_proxy/: test_manager.py  test_sources.py
tests/test_search/: test_api_interceptor.py  test_google_news.py  test_google_search.py  test_searxng.py  test_seleniumbase.py  test_yandex.py
tests/test_utils/: test_cache.py  test_date_parser.py  test_dedup.py  test_punycode.py  test_rate_limiter.py  test_small_media.py  test_url_builder.py
