[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "power-scrapper"
version = "0.1.0"
description = "Next-generation news scraping module with SearXNG, Playwright, and multi-source extraction"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "patchright>=1.0",
    "httpx>=0.27",
    "trafilatura>=1.8",
    "newspaper4k>=0.9",
    "readability-lxml>=0.8",
    "beautifulsoup4>=4.12",
    "pandas>=2.1",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
rnet = ["rnet>=2.4"]
curl-cffi = ["curl_cffi>=0.7"]
crawl4ai = ["crawl4ai>=0.6"]
camoufox = ["camoufox>=0.4"]
nodriver = ["nodriver>=0.38"]
seleniumbase = ["seleniumbase>=4.30"]
stealth = [
    "rnet>=2.4",
    "camoufox>=0.4",
    "nodriver>=0.38",
    "seleniumbase>=4.30",
    "crawl4ai>=0.6",
]

[project.scripts]
power-scrapper = "power_scrapper.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/power_scrapper"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
